# retinal-ecap-detection

./: .gitignore  Jespers_threshold.ipynb  LICENSE  README.md  Sandbox_sample_data.ipynb  ml_test.ipynb  pyproject.toml  requirements.txt  retinal-ecap-detection.code-workspace
eda/: irregularities.ipynb
ml_scripts/: Jespers_threshold.ipynb  SA_templates.ipynb  SA_templates.npy  Sandbox_sample_data.ipynb  comparing_channels.ipynb  data_overview.ipynb  energy_segment.ipynb  filtering_data.ipynb  frequency_domian_analysis.ipynb  removal_of_sa.ipynb
mlp_spike_detection/: hivecotev2.ipynb  model.pth  plain_vector_1000.npy  pred.py  pred_data_vector_1000.npy  sandbox.ipynb  simulate_windows.py  spike_vector_1000.npy  spikes_vector_1000.npy  train.py  unlabel_pred.py
results/: classifcation_results.ipynb  classification_r1.csv  classification_r2.csv  classification_r3.csv  ml_analysis_results.ipynb  othermodels_r1.csv  othermodels_r2.csv  othermodels_r3.csv  receptive_field_analysis.ipynb  tuning_results.ipynb
simulate/: data_description.ipynb  parameters.ipynb  simulate.py  try_mearec.ipynb
spike_detection/: AP_templates.npy  ME_template.npy  all_dataset_hp_tune_job_array.sh  all_dataset_job_array.sh  all_dataset_train_job_array.sh  generate_datasets.py  hivecotev2.ipynb  othermodels_r1.csv  predict.ipynb  predict_real.ipynb  predict_real.py  train.py  train_batch.sh  tune.py
src/: average_method.py  filter_classification.py  generate_datasets.py  make_dataset.py  recording_generator.py  threshold_based.py  train_and_eval.py  treshold_based.py  utils.py  (+1 more)
(+10 files in other folders)
